--- a/keyboard/MDK-ARM/keyboard.uvprojx
+++ b/keyboard/MDK-ARM/keyboard.uvprojx
@@ -789,6 +789,11 @@
               <FileType>1</FileType>
               <FilePath>..\Lib\DS1307.c</FilePath>
             </File>
+            <File>
+              <FileName>hid_report_desc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Lib\hid_report_desc.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
